--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -37,7 +37,7 @@ templates:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
-      file: ./src/mappings/TokenPair.ts
+      file: ./src/TokenPair.ts
       entities:
         - Pair
         - Token
