--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -32,7 +32,7 @@ dataSources:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handlePairCreated
 templates:
-  - name: LiquidityPoolPair
+  - name: V2Pair
     kind: ethereum/contract
     network: rinkeby
     source:
@@ -59,5 +59,5 @@ templates:
           handler: handleSwap
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        # - event: Sync(uint112,uint112)
-        #   handler: handleSync
+        - event: Sync(uint112,uint112)
+          handler: handleSync
